@@ -1,3 +1,8 @@
+2003-03-30  Gert-Jan Paulissen  <g.paulissen@chello.nl>
+
+	* Makefile.am: Simple automake test suite implemented.
+        * Makefile.am: factorial_LDADD used instead of LDADD.
+
 2003-03-10  Gert-Jan Paulissen  <g.paulissen@chello.nl>
 
         * Makefile.am: AM_CPPFLAGS used instead of INCLUDES
